--- a/week9/package.json
+++ b/week9/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap": "^3.3.7",
     "element-ui": "^2.4.8",
+    "loadsh": "0.0.4",
     "vue": "^2.6.10"
   },
   "devDependencies": {},
