--- a/面试题/react/myreact/package.json
+++ b/面试题/react/myreact/package.json
@@ -7,11 +7,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^3.26.9",
+    "antd-mobile": "^2.3.1",
+    "babel-plugin-import": "^1.13.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
